src/styles/main.css
.text-play {
    color: #41F11F
}
.ui-datepicker .dropdown-menu {
    min-width: 290px;
}
.bg-gray {
    background-color: #f5f5f5;
    /*color: #FFF;*/
}

.input-group .datetime-picker-dropdown {
    min-width: 280px;
}

.datetime-picker-dropdown .time-picker-menu table .form-group input {
    width: 50px;
}

.animate-show {
    opacity: 1;

    background: white;
}

.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
    transition: all linear 0.15s;
}

.animate-show.ng-hide {
    line-height: 0;
    opacity: 0;
    padding: 0 10px;
}

html {
    font-family: sans-serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%
}

body {
    margin: 0
}

.btn .save-exit {
    position: absolute;
    left: 0;
    bottom: 100%;
    margin-left: 12px;
}

input[type="search"]{
    padding-right: 35px;
    border-bottom-style: solid;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom-color: #999;
}


#scrollToTop {
    display: none;
    background-color: #404449;
    color: #fff;
    cursor: pointer;
    position: fixed;
    bottom: 55px;
    font-size: 20px;
    right: 5px;
    border-radius: 2px;
    opacity: 0;
    z-index: 999;
    -webkit-transition: opacity .3s;
    transition: opacity .3s
}

#scrollToTop.in {
    opacity: .5;
    transition: opacity .3s
}

#scrollToTop.in:hover {
    opacity: 1;
    -webkit-transition: opacity .3s;
    transition: opacity .3s
}

.ui-notification
{
    position: fixed;
    z-index: 9999;

    width: 300px;

    cursor: pointer;
    -webkit-transition: all ease .5s;
    -o-transition: all ease .5s;
    transition: all ease .5s;

    color: #fff;
    border-radius: 0;
    background: #337ab7;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, .3);
}
.ui-notification.killed
{
    -webkit-transition: opacity ease 1s;
    -o-transition: opacity ease 1s;
    transition: opacity ease 1s;

    opacity: 0;
}
.ui-notification > h3
{
    font-size: 14px;
    font-weight: bold;

    display: block;

    margin: 10px 10px 0 10px;
    padding: 0 0 5px 0;

    text-align: left;

    border-bottom: 1px solid rgba(255, 255, 255, .3);
}
.ui-notification a
{
    color: #fff;
}
.ui-notification a:hover
{
    text-decoration: underline;
}
.ui-notification > .message
{
    margin: 10px 10px 10px 10px;
}
.ui-notification.warning
{
    color: #fff;
    background: #f0ad4e;
}
.ui-notification.error
{
    color: #fff;
    background: #d9534f;
}
.ui-notification.success
{
    color: #fff;
    background: #5cb85c;
}
.ui-notification.info
{
    color: #fff;
    background: #5bc0de;
}
.ui-notification:hover
{
    opacity: .7;
}

.loading{
    display: block;
    z-index: 1000;
    color: #0E0E0E;
    position: absolute;
    height: 100%;
    width: 100%;
    opacity: 0.7;
    /*background-color: rgb(14, 13, 15);*/
}

.loading span{
    position: fixed;
    /* left: 0; */
    /* top: 0; */
    display: inline-block;
    vertical-align: middle;
    float: none;
}

.st-sort-ascent:before{
    content: '\25B2';
}

.st-sort-descent:before{
    content: '\25BC';
}


.switch.switch-small i:before {
    display: block;
    content: '';
    width: 15px;
    height: 15px;
    border-radius: 15px;
    background: #fff;
    box-shadow: 0 1px 2px rgba(0,0,0,.5)
}

.lr-sticky-header {
    padding-top: 60px;
    z-index: 1;
    background-color: white;
}

.edit-in-place span {
    cursor: pointer;
}

.edit-in-place input {
    display: none;
}

.edit-in-place.active span {
    display: none;
}

.edit-in-place.active input {
    display: inline-block;
}


article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary {
    display: block
}

audio,canvas,progress,video {
    display: inline-block;
    vertical-align: baseline
}

audio:not([controls]) {
    display: none;
    height: 0
}

[hidden],template {
    display: none
}

a {
    background: 0 0
}

a:active,a:hover {
    outline: 0
}

b,strong {
    font-weight: 700
}

dfn {
    font-style: italic
}

h1 {
    margin: .67em 0
}

mark {
    background: #ff0;
    color: #000
}

sub,sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sup {
    top: -.5em
}

sub {
    bottom: -.25em
}

img {
    border: 0
}

svg:not(:root) {
    overflow: hidden
}

hr {
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    height: 0
}

pre {
    overflow: auto
}

code,kbd,pre,samp {
    font-size: 1em
}

button,input,optgroup,select,textarea {
    color: inherit;
    font: inherit;
    margin: 0
}

button {
    overflow: visible
}

button,select {
    text-transform: none
}

button,html input[type=button],input[type=reset],input[type=submit] {
    -webkit-appearance: button;
    cursor: pointer
}

button[disabled],html input[disabled] {
    cursor: default
}

button::-moz-focus-inner,input::-moz-focus-inner {
    border: 0;
    padding: 0
}

input[type=checkbox],input[type=radio] {
    box-sizing: border-box;
    padding: 0
}

input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button {
    height: auto
}


textarea {
    overflow: auto
}

optgroup {
    font-weight: 700
}

table {
    /*table-layout: fixed;*/
    word-wrap: break-word;
    border-collapse: collapse;
    border-spacing: 0
}

td,th {
    padding: 0
}
/* ... */

